--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -68,7 +68,7 @@ jobs:
           # 例如:
           cat >> youku-1.config <<EOF
           CONFIG_TARGET_IMAGES_GZIP=y
-          CONFIG_KERNEL_BUILD_USER="OpenWrt-CI"
+          CONFIG_KERNEL_BUILD_USER="OpenWrt"
           CONFIG_KERNEL_BUILD_DOMAIN="Azure"
           EOF
           #
